# EPITECH-arcade-2019

./: CMakeLists.txt  Makefile  README.md
core/: CMakeLists.txt  Makefile
core/include/: Arcade.hpp  DLLoader.hpp  GameEngine.hpp  IGameModule.hpp  IGraphicalModule.hpp  Menu.hpp  arcadeError.hpp  bitmapReader.hpp  color.hpp  text.hpp
core/src/: Arcade.cpp  GameEngine.cpp  Menu.cpp  arcadeError.cpp  bitmapReader.cpp  main.cpp
games/: CMakeLists.txt
games/Qix/: CMakeLists.txt  Makefile
games/Qix/include/: Clock.hpp  Fire.hpp  GameObject.hpp  Map.hpp  Player.hpp  QixMonster.hpp  Sparks.hpp  mapData.hpp  qix.hpp
games/Qix/src/: Fire.cpp  GameObject.cpp  Map.cpp  Player.cpp  QixMonster.cpp  Sparks.cpp  bitmapReader.cpp  qix.cpp
games/SolarFox/: CMakeLists.txt  Makefile
games/SolarFox/include/: Bullet.hpp  Clock.hpp  Fire.hpp  Objective.hpp  Starship.hpp  arcadeError.hpp  solarFox.hpp
games/SolarFox/src/: Bullet.cpp  Clock.cpp  Fire.cpp  GameEngine.cpp  Objective.cpp  Starship.cpp  solarFox.cpp
lib/: CMakeLists.txt
lib/NCurse/: CMakeLists.txt  Makefile
lib/NCurse/include/: ncurse.hpp
lib/NCurse/src/: color.cpp  ncurse.cpp
lib/SFML/: CMakeLists.txt  Makefile
lib/SFML/include/: sfml.hpp
lib/SFML/src/: sfml.cpp
lib/opengl/: CMakeLists.txt  Makefile
lib/opengl/include/: opengl.hpp
lib/opengl/src/: opengl.cpp
tests/: CMakeLists.txt  Makefile  test_bitmap_reader.cpp
